# DetectMateService

./: .gitignore  .pre-commit-config.yaml  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: publish-docs.yml  python-app.yml
demo/: Dockerfile  docker-compose.yml  manual_demo_run.py  manual_demo_run_tcp.py
demo/config/ipc/: detector_config.yaml  detector_settings.yaml  parser_config.yaml  parser_settings.yaml  reader_config.yaml  reader_settings.yaml
demo/data/: test_templates.txt
docs/: configuration.md  index.md  installation.md  library.md  pipeline.md  quick-start.md  usage.md
scripts/: client.py  run_demo_scenario.sh  walkthrough.md
scripts/config/: receiver.yaml  sender.yaml
src/corecomponent/: __init__.py  core_component.py  settings.py
src/corecomponent/features/: engine.py  manager.py
src/corecomponent/schemas/: schemas.py
src/manual_tests/: README.md  demo_manager.py  engine_client.py  manager_client.py  smoke_test.py
src/service/: __init__.py  cli.py  core.py  settings.py
src/service/features/: component_loader.py  config.py  config_loader.py  config_manager.py  engine.py  engine_socket.py  manager.py  manager_socket.py  parameter_manager.py
tests/: test_component_id.py  test_config_reading.py  test_detectmatelibrary_import.py  test_engine_blocking.py  test_engine_loop.py  test_engine_multi_output.py  test_manager_commands.py  test_manager_socket_error_handling.py  test_pipeline_demos.py  test_reconfigure_params.py  test_service_multi_output_integration.py  test_smoke_service.py
tests/config/: detector_config.yaml  new_params.yaml  service_config.yaml  service_settings.yaml
tests/library_integration/: test_detector_integration.py  test_one_pipe_to_rule_them_all.py  test_parser_integration.py  test_pipe_filereader_matcher_nvd.py  test_reader_integration.py
tests/test_component_loader/: test_component_loader.py  test_detectmatelibrary_import.py
