[project]
name = "service-prototype"
version = "0.1.0"
description = "Prototype for the core service of DetectMate"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "pathlib>=1.0.1",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "pynng>=0.8.1",
    "pyyaml>=6.0.2",
    "types-pyyaml>=6.0.12.20250915",
]

[project.optional-dependencies]
# add dependencies in this section with: uv add --optional dev <package>
# install with all the dev dependencies:  uv pip install -e .[dev]
dev = [
    "mypy>=1.18.2",
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
]

[mypy]
ignore_missing_imports = true

[project.scripts]
detectmate = "service.cli:main"
